--- a/templates/email/confirmation.html.twig
+++ b/templates/email/confirmation.html.twig
@@ -5,5 +5,6 @@
 <p>
     Please confirm your e-mail address by clicking
     <a href="{{ url('default_confirm_token', {'token': user.getConfirmationToken()}) }}">this</a>
+    {#confirmation token#}
     link or, type the code inside the form: <b>{{ user.getConfirmationToken() }}</b>
 </p>
